--- a/style.css
+++ b/style.css
@@ -52,6 +52,17 @@
     border-radius: 10px;
 }
 
+table{
+    justify-content: center;
+    width: 60%;
+    margin: auto;
+}
+
+th,
+td{
+    border: 1px solid;
+}
+
 #footer{
     display: flex;
     justify-content: space-around;
